contrast fix

--- a/styles/place.css
+++ b/styles/place.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-bg-color: #333;
+    --primary-bg-color: #999;
     /* Background color */
     --secondary-text-color: #000;
     /* Text color */
